Update to make java 8 and junit 4 compliant